# gscn_pioneer

./: CMakeLists.txt  README.md  default.nix  fetchNixpkgs.nix  package.xml  pioneer.params  release.nix  setup.py
gscn_pioneer/: CMakeLists.txt  package.xml
gscn_pioneer_ap/: CMakeLists.txt  package.xml
gscn_pioneer_ap/launch/: ap.launch  mavros_config.yaml
gscn_pioneer_description/: CMakeLists.txt  package.xml
gscn_pioneer_description/launch/: pose_rviz.launch  rviz.launch  tf_pose.launch
gscn_pioneer_description/meshes/: frame.stl  ir_config_norm.stl
gscn_pioneer_description/rviz/: config.rviz
gscn_pioneer_description/urdf/: common_properties.xacro  pioneer_model.xacro  pioneer_ray.xacro  test_model.xacro
gscn_pioneer_mission/: CMakeLists.txt  package.xml  pioneer_gps.params  pioneer_lps.params
gscn_pioneer_mission/launch/: mission.launch
gscn_pioneer_mission/src/gscn_pioneer_mission/: mission.py
launch/: gscn_mavros.launch  mavros_config.yaml  mavros_pluginlists.yaml  mission.launch
missions/: test_mission.yaml
scripts/: mission_node
src/gscn_pioneer_mission/: mission.py  nodes.py
